--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
-    "mongoose": "^5.9.21"
+    "mongoose": "^5.9.21",
+    "nodemon": "^2.0.4",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {}
 }
